<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg4"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context="com.csei.devicemanagement.LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/logo_name"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/red"
            android:contentDescription="@string/divider" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/project_name"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_background"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp"
            android:scrollbars="vertical" >

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_edittext_bg"
                android:ems="10"
                android:hint="@string/input_username"
                android:paddingBottom="5dp"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textSize="15sp" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/input_passwords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_edittext_bg"
                android:ems="10"
                android:hint="@string/input_passwords"
                android:paddingBottom="5dp"
                android:paddingLeft="2dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF" >

                <CheckBox
                    android:id="@+id/show_passwords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_passwords" />

                <CheckBox
                    android:id="@+id/remember_passwords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remember_passwords" />
            </LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/common_btn_selector"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/submit"
                android:textColor="@color/white"
                
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>