<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include layout="@layout/common_top_bar_install" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_site"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/Sp_install"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF" >

        <EditText
            android:id="@+id/input_deviceId_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/input_deviceId"
            android:numeric="integer"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textSize="10sp" >

        </EditText>

        <EditText
            android:id="@+id/input_mainDeviceId_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/input_mainDeviceId"
            android:numeric="integer"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textSize="10sp" />

        <Button
            android:id="@+id/add_device_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_default"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:text="@string/add_device"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listAndBottom_bar_install"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="5"
            android:background="#FFFFFF" >

            <ListView
                android:id="@+id/lv_install"
                android:layout_width="match_parent"
                android:layout_height="200sp" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="#FFFFFF" >

            <Button
                android:id="@+id/save_install"
                android:layout_width="wrap_content"
                android:layout_height="25sp"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:text="@string/save"
                android:textSize="15sp" />

            <Button
                android:id="@+id/upload_install"
                android:layout_width="wrap_content"
                android:layout_height="25sp"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:text="@string/upload"
                android:textSize="15sp" />

            <Button
                android:id="@+id/cancel_install"
                android:layout_width="wrap_content"
                android:layout_height="25sp"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:text="@string/cancel"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scan_Button_deviceId_install"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:background="@drawable/btn_default"
            android:text="@string/addDevice"
            android:textSize="20sp" />

        <Button
            android:id="@+id/scan_Button_mainDeviceId_install"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:background="@drawable/btn_default"
            android:text="@string/addMainDevice"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>