<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include layout="@layout/common_top_bar_stock_out" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_store"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/storehouseSp_stockout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listviewLayout_stockout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="5"
            android:background="#FFFFFF" >

            <ListView
                android:id="@+id/add_item_listview_stockout"
                android:layout_width="match_parent"
                android:layout_height="250dp" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF" >

            <Button
                android:id="@+id/savebutton_stockout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:text="@string/save"
                android:textSize="15sp" />

            <Button
                android:id="@+id/uploadbutton_stockout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:text="@string/upload"
                android:textSize="15sp" />

            <Button
                android:id="@+id/cancelbutton_stockout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_default"
                android:text="@string/cancel"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <Button
            android:id="@+id/scan_Button_stockout"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@drawable/btn_default"
            android:text="@string/saoka"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>