<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include layout="@layout/common_top_bar_transport" />

    <RelativeLayout
        android:id="@+id/listviewLayout_transport"
        android:layout_below="@+id/bar_transport"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/scan_Button_transport"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

            <ExpandableListView
                android:id="@+id/add_item_listview_transport"
                android:layout_above="@+id/linearlayout_button"
                android:layout_width="fill_parent"
				android:layout_height="match_parent"
                 />
        <LinearLayout
            android:id="@+id/linearlayout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#FFFFFF" >

            <Button
                android:id="@+id/savebutton_transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape1"
                android:text="@string/save"
                android:textSize="15sp" />

            <Button
                android:id="@+id/uploadbutton_transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/shape1"
                android:text="@string/upload"
                android:textSize="15sp" />

            <Button
                android:id="@+id/cancelbutton_transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape1"
                android:text="@string/cancel"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>


        <Button
            android:id="@+id/scan_Button_transport"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/shape"
            android:layout_height="wrap_content"
            android:text="@string/saoka"
            android:textSize="20sp" />

</RelativeLayout>