<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EAEAEE" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#EAEAEE" >

        <EditText
            android:id="@+id/drivernameedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_edittext_bg"
            android:ems="10"
            android:hint="@string/input_drivername"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/driverphoneedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drivernameedt"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_edittext_bg"
            android:ems="10"
            android:hint="@string/input_driverphone"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textSize="15sp" >
        </EditText>

        <EditText
            android:id="@+id/carnumberedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driverphoneedt"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_edittext_bg"
            android:ems="10"
            android:hint="@string/input_carnumber"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textSize="15sp" >
        </EditText>
    </RelativeLayout>

</RelativeLayout>