<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include layout="@layout/common_top_bar_uninstall" />

    <RelativeLayout
        android:layout_below="@+id/common_top_bar_uninstall_layout"
        android:id="@+id/listAndBottom_bar_uninstall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scandevicebutton_layout_uninstall"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:visibility="invisible"
         >

        

            <ListView
               	android:layout_above="@+id/optionbuttonlayout_uninstall"
                android:id="@+id/add_item_listview_uninstall"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ListView>

        <LinearLayout
            android:id="@+id/optionbuttonlayout_uninstall"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#FFFFFF" >

            <Button
                android:id="@+id/save_uninstall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/shape1"
                android:text="@string/save"
                android:textSize="15sp" />

            <Button
                android:id="@+id/upload_uninstall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/shape1"
                android:text="@string/upload"
                android:textSize="15sp" />

            <Button
                android:id="@+id/cancel_uninstall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape1"
                android:text="@string/cancel"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/scandevicebutton_layout_uninstall"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scan_Button_deviceId_uninstall"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:background="@drawable/shape"
            android:layout_height="40sp"
            android:text="@string/saoka"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>